--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,8 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : false
+  # ASSET_PATH : false
+  ASSET_PATH : /hyclops/assets/themes/dinky
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
